fixed mobile overflow bc of facebook like widget

--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -35,6 +35,11 @@ form.footer-form {
     }
 }
 
+div.fb-like {
+    max-width: 100%;
+    overflow: hidden;
+}
+
 span.redacted {
     display: inline-block;
     width: 150px;
